syntax = "proto3";

package hello;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc GetHello (GetHelloRequest) returns (GetHelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message GetHelloRequest {
  int64 n = 1;
}

message GetHelloResponse {
  string message = 1;
}
